name               : wai-routes
version            : 0.9.9
cabal-version      : >=1.18
build-type         : Simple
license            : MIT
license-file       : LICENSE
maintainer         : ajnsit@gmail.com
stability          : Experimental
homepage           : https://ajnsit.github.io/wai-routes/
synopsis           : Typesafe URLs for Wai applications.
description        : Provides easy to use typesafe URLs for Wai Applications. See README for more information. Also see examples/ directory for usage examples.
category           : Network
author             : Anupam Jain
data-dir           : ""
extra-source-files : README.md
                   , test/static/lambda.png

source-repository head
    type     : git
    location : http://github.com/ajnsit/wai-routes

source-repository this
    type     : git
    location : http://github.com/ajnsit/wai-routes/tree/v0.9.9
    tag      : v0.9.9

library
    build-depends      : base               >= 4.7  && < 4.10
                       , wai                >= 3.0  && < 3.3
                       , wai-extra          >= 3.0  && < 3.1
                       , wai-app-static     >= 3.0  && < 3.2
                       , text               >= 1.2  && < 1.3
                       , template-haskell   >= 2.9  && < 2.12
                       , mtl                >= 2.1  && < 2.3
                       , aeson              >= 0.8  && < 1.1
                       , containers         >= 0.5  && < 0.6
                       , random             >= 1.1  && < 1.2
                       , path-pieces        >= 0.2  && < 0.3
                       , bytestring         >= 0.10 && < 0.11
                       , http-types         >= 0.8  && < 0.10
                       , blaze-builder      >= 0.4  && < 0.5
                       , monad-loops        >= 0.4  && < 0.5
                       , case-insensitive   >= 1.2  && < 1.3
                       , mime-types         >= 0.1  && < 0.2
                       , filepath           >= 1.3  && < 1.5
                       , cookie             >= 0.4  && < 0.5
                       , data-default-class >= 0.0  && < 0.2
                       , vault              >= 0.3  && < 0.4
    exposed-modules    : Wai.Routes, Network.Wai.Middleware.Routes
    other-modules      : Routes.Parse
                         Routes.Overlap
                         Routes.Class
                         Routes.Routes
                         Routes.Monad
                         Routes.Handler
                         Routes.ContentTypes
                         Routes.DefaultRoute
                         Routes.TH
                         Routes.TH.Types
                         Routes.TH.Dispatch
                         Routes.TH.ParseRoute
                         Routes.TH.RenderRoute
                         Routes.TH.RouteAttrs
                         Util.Free
    exposed            : True
    buildable          : True
    hs-source-dirs     : src
    default-language   : Haskell2010
    ghc-options        : -Wall

test-suite test
  main-is          : Spec.hs
  other-modules    : HelloSpec
  type             : exitcode-stdio-1.0
  default-language : Haskell2010
  hs-source-dirs   : test
  GHC-options      : -Wall -threaded -fno-warn-orphans

  build-depends    : base           >= 4.7 && < 4.10
                   , wai            >= 3.0 && < 3.3
                   , aeson          >= 0.8 && < 1.1
                   , hspec          >= 2.1 && < 2.4
                   , hspec-wai      >= 0.6 && < 0.9
                   , hspec-wai-json >= 0.6 && < 0.9
                   , text           >= 1.2 && < 1.3
                   , wai-routes
  ghc-options        : -Wall
