name               : wai-routes
version            : 0.10.3
cabal-version      : >=1.18
build-type         : Simple
license            : MIT
license-file       : LICENSE
maintainer         : ajnsit@gmail.com
stability          : Experimental
homepage           : https://ajnsit.github.io/wai-routes/
synopsis           : Typesafe URLs for Wai applications.
description        : Provides easy to use typesafe URLs for Wai Applications. See README for more information. Also see examples/ directory for usage examples.
category           : Network
author             : Anupam Jain
data-dir           : ""
extra-source-files : README.md

source-repository head
    type     : git
    location : http://github.com/ajnsit/wai-routes

source-repository this
    type     : git
    location : http://github.com/ajnsit/wai-routes/tree/v0.10.3
    tag      : v0.10.3

library
    build-depends      : base               >= 4.7  && < 4.12
                       , wai                >= 3.0  && < 3.3
                       , wai-extra          >= 3.0  && < 3.1
                       , text               >= 1.2  && < 1.3
                       , template-haskell   >= 2.9  && < 2.14
                       , mtl                >= 2.1  && < 2.3
                       , aeson              >= 0.8  && < 1.4
                       , containers         >= 0.5  && < 0.6
                       , random             >= 1.1  && < 1.2
                       , path-pieces        >= 0.2  && < 0.3
                       , bytestring         >= 0.10 && < 0.11
                       , http-types         >= 0.8  && < 0.13
                       , blaze-builder      >= 0.4  && < 0.5
                       , monad-loops        >= 0.4  && < 0.5
                       , case-insensitive   >= 1.2  && < 1.3
                       , mime-types         >= 0.1  && < 0.2
                       , filepath           >= 1.3  && < 1.5
                       , cookie             >= 0.4  && < 0.5
                       , data-default-class >= 0.0  && < 0.2
                       , vault              >= 0.3  && < 0.4
    exposed-modules    : Wai.Routes, Network.Wai.Middleware.Routes
    other-modules      : Routes.Parse
                         Routes.Overlap
                         Routes.Class
                         Routes.Routes
                         Routes.Monad
                         Routes.Handler
                         Routes.ContentTypes
                         Routes.DefaultRoute
                         Routes.TH
                         Routes.TH.Types
                         Routes.TH.Dispatch
                         Routes.TH.ParseRoute
                         Routes.TH.RenderRoute
                         Routes.TH.RouteAttrs
                         Util.Free
    exposed            : True
    buildable          : True
    hs-source-dirs     : src
    default-language   : Haskell2010
    ghc-options        : -Wall

test-suite test
  main-is          : Spec.hs
  other-modules    : HelloSpec
  type             : exitcode-stdio-1.0
  default-language : Haskell2010
  hs-source-dirs   : test
  GHC-options      : -Wall -threaded -fno-warn-orphans

  build-depends    : base           >= 4.7 && < 4.12
                   , wai            >= 3.0 && < 3.3
                   , aeson          >= 0.8 && < 1.4
                   , hspec          >= 2.1 && < 2.6
                   , hspec-wai      >= 0.6 && < 0.10
                   , hspec-wai-json >= 0.6 && < 0.10
                   , text           >= 1.2 && < 1.3
                   , wai-routes
  ghc-options        : -Wall
