name               : wai-routes
version            : 0.10.5
cabal-version      : 1.18
build-type         : Simple
license            : MIT
license-file       : LICENSE
maintainer         : ajnsit@gmail.com
stability          : Experimental
homepage           : https://ajnsit.github.io/wai-routes/
synopsis           : Typesafe URLs for Wai applications.
description        : Provides easy to use typesafe URLs for Wai Applications. See README for more information. Also see examples/ directory for usage examples.
category           : Network
author             : Anupam Jain
data-dir           : ""
extra-source-files : README.md

source-repository this
    type     : git
    location : http://github.com/ajnsit/wai-routes

library
    build-depends      : base
                       , wai
                       , wai-extra
                       , text
                       , template-haskell
                       , mtl
                       , aeson
                       , containers
                       , random
                       , path-pieces
                       , bytestring
                       , http-types
                       , blaze-builder
                       , monad-loops
                       , case-insensitive
                       , mime-types
                       , filepath
                       , cookie
                       , data-default-class
                       , vault
                       , safe-exceptions
    exposed-modules    : Wai.Routes, Network.Wai.Middleware.Routes
    other-modules      : Routes.Parse
                         Routes.Overlap
                         Routes.Class
                         Routes.Routes
                         Routes.Monad
                         Routes.Handler
                         Routes.ContentTypes
                         Routes.DefaultRoute
                         Routes.TH
                         Routes.TH.Types
                         Routes.TH.Dispatch
                         Routes.TH.ParseRoute
                         Routes.TH.RenderRoute
                         Routes.TH.RouteAttrs
                         Util.Free
    exposed            : True
    buildable          : True
    hs-source-dirs     : src
    default-language   : Haskell2010
    ghc-options        : -Wall

test-suite test
  main-is          : Spec.hs
  other-modules    : HelloSpec
  type             : exitcode-stdio-1.0
  default-language : Haskell2010
  hs-source-dirs   : test
  GHC-options      : -Wall -threaded -fno-warn-orphans

  build-depends    : base
                   , wai
                   , aeson
                   , hspec
                   , hspec-wai
                   , hspec-wai-json
                   , text
                   , wai-routes
  ghc-options        : -Wall
