name          : wai-routes-examples
version       : 0.2.0.0
cabal-version : >=1.10
build-type    : Simple
license       : PublicDomain
maintainer    : ajnsit@gmail.com
synopsis      : Examples for wai-routes
description   : Examples for wai-routes
category      : Web
author        : Anupam Jain
data-dir      : ""

executable wai-routes-examples
    build-depends    : base           >= 4.6.0.1  && < 4.7
                     , wai            >= 2.0.0    && < 2.2
                     , wai-routes     >= 0.4.1    && < 0.6
                     , wai-app-static >= 2.0.0.2  && < 2.1
                     , wai-extra      >= 2.0.3.3  && < 2.2
                     , warp           >= 2.0.3.2  && < 2.2
                     , http-types     >= 0.8.3    && < 0.9
                     , text           >= 0.11.3.1 && < 0.12
                     , aeson          >= 0.7.0.1  && < 0.8
                     , containers     >= 0.5.0.0  && < 0.6
                     , mtl            >= 2.1.2    && < 2.2
    main-is          : Example.hs
    buildable        : True
    default-language : Haskell2010
    other-extensions : OverloadedStrings TemplateHaskell QuasiQuotes TypeFamilies

