name          : wai-routes-examples
version       : 0.2.0.0
cabal-version : >=1.16
build-type    : Simple
license       : PublicDomain
maintainer    : ajnsit@gmail.com
synopsis      : Examples for wai-routes
description   : Examples for wai-routes
category      : Web
author        : Anupam Jain
data-dir      : ""

executable wai-routes-examples
    build-depends    : base
                     , wai
                     , wai-routes
                     , wai-app-static
                     , wai-extra
                     , warp
                     , http-types
                     , text
                     , aeson
                     , containers
                     , mtl
    main-is          : Example.hs
    buildable        : True
    default-language : Haskell2010
    other-extensions : OverloadedStrings TemplateHaskell QuasiQuotes TypeFamilies

