name          : bare-wai-example
version       : 0.8.0
cabal-version : >=1.16
build-type    : Simple
license       : PublicDomain
maintainer    : ajnsit@gmail.com
synopsis      : Bare wai example for wai-routes
description   : Bare wai example for wai-routes
category      : Web
author        : Anupam Jain
data-dir      : ""

executable bare-wai-example
    build-depends    : base
                     , wai
                     , wai-routes
                     , wai-extra
                     , wai-app-static
                     , warp
                     , text
                     , bytestring
    main-is          : Main.hs
    buildable        : True
    default-language : Haskell2010
    ghc-options      : -Wall
    hs-source-dirs : src
