name          : streaming-response-example
version       : 0.7.2
cabal-version : >=1.16
build-type    : Simple
license       : PublicDomain
maintainer    : ajnsit@gmail.com
synopsis      : Streaming response example for wai-routes
description   : Streaming response example for wai-routes
category      : Web
author        : Anupam Jain
data-dir      : ""

executable streaming-response-example
    build-depends    : base
                     , wai
                     , wai-routes
                     , wai-extra
                     , wai-app-static
                     , warp
                     , bytestring
                     , transformers
    main-is          : Main.hs
    buildable        : True
    default-language : Haskell2010
    ghc-options      : -Wall
    hs-source-dirs : src
