name          : subsites-example
version       : 0.8.0
cabal-version : >=1.16
build-type    : Simple
license       : PublicDomain
maintainer    : ajnsit@gmail.com
synopsis      : Subsites examples for wai-routes
description   : Subsites examples for wai-routes
category      : Web
author        : Anupam Jain
data-dir      : ""

executable subsites-example
    build-depends    : base >= 4.7  && < 4.12
                     , wai-routes
                     , wai-app-static
                     , wai-extra
                     , warp
                     , http-types
                     , text
                     , aeson
                     , containers
                     , mtl
    main-is          : Main.hs
    other-modules    : HelloSub
    buildable        : True
    default-language : Haskell2010
    ghc-options      : -Wall
    hs-source-dirs : src
